--- a/aboutwe.html
+++ b/aboutwe.html
@@ -138,7 +138,7 @@
                         много нового.
                     </div>
                     <div class="text-block-info">
-                        Мы ученицы 10-ого класса школы №1474, а сам сайт - это наша пректная работа,
+                        Мы ученицы 10-ого класса школы №1474, а сам сайт - это наша проектная работа,
                         задачей которой является создание удобной платформы для изучения английского языка, а именно
                         анатомии животных на английском языке. Мы проделали большую работу и будем очень рады<a href="egor.html" class="egor">, </a> если наш
                          сайт тебе понравится!
